[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "oci-monitoring-exporter"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "oci==2.178.0",
    "prometheus-client==0.23.1",
    "PyYAML==6.0.2",
    "opentelemetry-api",
    "opentelemetry-sdk==1.42.1",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation",
    "opentelemetry-instrumentation-logging",
]

[project.optional-dependencies]
dev = [
    "bandit",
    "pylint==4.0.6",
    "tox==4.55.1",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-mock==3.15.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pylint.main]
jobs = 0
persistent = true
recursive = true

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "too-many-statements",
    "too-few-public-methods",
    "too-many-branches",
    "too-many-arguments",
    "too-many-locals",
    "too-many-positional-arguments",
    "too-many-instance-attributes",
    "line-too-long",
    "logging-fstring-interpolation",
    "broad-exception-caught",
    "too-many-return-statements",
    "protected-access",
    "too-many-nested-blocks",
]

[tool.pylint.format]
max-line-length = 120
indent-string = "    "

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "e", "f", "db", "ns", "cfg"]

[tool.pylint.design]
max-args = 8
max-locals = 20

[tool.pylint.similarities]
min-similarity-lines = 10

[tool.pylint.imports]
allow-wildcard-with-all = false
